Changed format for hybrid query results to a single list of scores with delimiter (#259)
* Changed approach for storing hybrid query results from compound top docs to signle list of scores with delimiter

Signed-off-by: Martin Gaievski <gaievski@amazon.com>
(cherry picked from commit 75b59cd5f0f45c83f7e6d970f9ecc218d84cdcd7)